# ArmaScriptCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sqfc.grammar  sqfc.lua
.github/workflows/: ci.yml
src/: commandList.cpp  commandList.hpp  commandListUnary.cpp  compiledCode.hpp  logger.cpp  logger.hpp  luaHandler.cpp  luaHandler.hpp  lzokay_stream.cpp  main.cpp  scriptCompiler.cpp  scriptCompiler.hpp  scriptSerializer.cpp  scriptSerializer.hpp
src/optimizer/: optimizer.cpp  optimizer.h  optimizerModuleBase.cpp  optimizerModuleBase.hpp  optimizerModuleConstantFold.cpp  optimizerModuleConstantFold.hpp  optimizerModuleLua.cpp  optimizerModuleLua.hpp
test/: ace3.json  cba_a3.json
